--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ python-digitalocean==1.17.0
 paramiko==2.11.0
 Flask==2.1.0
 gunicorn==20.1.0
+kubernetes==26.1.0
+pyyaml==6.0
+docker==6.1.3
+requests==2.31.0
