--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 python-digitalocean==1.17.0
 paramiko==2.11.0
 Flask==2.3.2
+Flask-SQLAlchemy==3.0.3
+Flask-Login==0.6.2
 gunicorn==20.1.0
 requests==2.31.0
 python-dotenv==1.0.0
